# Seatbelt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  data_type.hpp  emitter.cpp  emitter.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  location.hpp  main.cpp  namespace.cpp  namespace.hpp  parameter_list.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  scope_generator.cpp  scope_generator.hpp  symbol_table.hpp  type_checker.cpp  type_checker.hpp  type_container.cpp  type_container.hpp  types.hpp
.github/workflows/: cmake.yml  tests.yml
src/: bssembly.cpp  bssembly.hpp  bssembly_optimizer.hpp  data_type.cpp  data_type.hpp  emitter.cpp  emitter.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  magic_enum_wrapper.hpp  main.cpp  mutability.hpp  namespace.cpp  namespace.hpp  overloaded.hpp  parameter_list.hpp  parser.cpp  parser.hpp  return_type_checker.cpp  return_type_checker.hpp  scope.hpp  scope_generator.cpp  scope_generator.hpp  source_code.hpp  stack_layout_generator.hpp  type_checker.cpp  type_checker.hpp  type_container.cpp  type_container.hpp  types.hpp  upholsterer.cpp  upholsterer.hpp  utils.cpp  utils.hpp
std/: assert.bs  prelude.bs  terminal.bs  utils.bs
std/terminal/: cursor.bs  terminal.bs
test/: CMakeLists.txt  tests.cpp
tests/: disable_test_regular_nothing.bs  import_test_file.bs  test_assignment_expression.bs  test_bool_operations.bs  test_bool_type.bs  test_boolean_not.bs  test_char.bs  test_const_mutable.bs  test_do_while.bs  test_empty_main_function.bs  test_for.bs  test_hello_world.bs  test_if.bs  test_if_else.bs  test_if_variable_in_block.bs  test_import.bs  test_inline_bssembly_with_string.bs  test_loop_break_continue.bs  test_modulo.bs  test_name_lookup_in_block.bs  test_namespace_with_multiple_definitions.bs  test_no_implicit_const_cast.bs  test_order_of_evaluation_in_nested_call.bs  test_relational_operators.bs  test_shadowing.bs  test_size_of_expressions_and_types.bs  test_type_deduction.bs  test_u32_equality.bs  test_while.bs
tests/arrays/: test_array_as_return_value.bs  test_array_of_function_pointers.bs  test_array_of_nothing.bs  test_array_pass_by_value.bs  test_simple_array.bs  test_two_dimensional_array.bs
tests/asserts/: test_assert_equals_fails.bs  test_assert_equals_succeeds.bs  test_assert_fails.bs  test_assert_succeeds.bs
tests/assignments/: test_assignment.bs  test_assignment_to_const_fails.bs
tests/char_literals/: test_invalid_escape_sequence.bs  test_single_backslash_as_char_fails.bs  test_valid_char_literals.bs
tests/custom_types/: test_data_layout_of_custom_type_variants.bs  test_data_layout_of_nested_custom_types.bs  test_sizes_of_custom_types.bs
tests/functions/: test_calling_non_exported_function_from_outside_namespace_fails.bs  test_exporting_global_function_fails.bs  test_function_calls.bs  test_implicit_return_type.bs  test_no_main_function_fails.bs  test_return_result_of_function_call_with_return_type_nothing.bs  test_return_statement.bs
tests/integer_literals/: test_integer_literal_binary_too_big.bs  test_integer_literal_decimal_too_big.bs  test_integer_literal_hexadecimal_too_big.bs  test_integer_literal_octal_too_big.bs  test_integer_literals_max_values.bs  test_integer_literals_with_underscores.bs
tests/nothing/: test_compare_nothing_literals.bs  test_initializing_nothing_variable_with_function_call.bs  test_nothing_as_function_parameter.bs  test_nothing_as_stack_variable.bs
tests/pointers/: test_assigning_const_pointer_to_mutable_pointer_fails.bs  test_cannot_subtract_pointer_from_integer.bs  test_dereferencing_bool_pointer.bs  test_pointer_arithmetics.bs  test_pointer_usage.bs
tests/structs/: test_arrays_of_structs.bs  test_memory_layout_of_structs.bs  test_pointer_arithmetics_with_arrays_of_structs.bs  test_structs_in_namespaces.bs  test_structs_inside_other_structs.bs
tests/subfolder/: file.bs  relative_to_import.bs
tests/undeclared_types/: test_use_of_undeclared_parameter_type_fails.bs  test_use_of_undeclared_return_type_fails.bs
